fix product title overlap issue

--- a/src/components/SingleProduct.module.css
+++ b/src/components/SingleProduct.module.css
@@ -25,7 +25,8 @@
   font-weight: 600;
   margin: 0 0 16px;
   white-space: nowrap;
-  overflow-x: 'hidden'
+  overflow-x: hidden;
+  text-overflow: ellipsis; 
 }
 
 .productBody {
